[package]
name = "sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = "1.3"
borsh = "1.5.7"
chrono = "0.4.42"
colored = "3.0.0"
console = "0.16.1"
dashmap = "6.1.0"
file_update_monitor = "0.1.2"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
magic-crypt = "4.0.1"
once_cell = "1.21.3"
reqwest = {version="0.12.23", features=["blocking", "json"]}
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "2.2.1"
solana-relayer-adapter-rust = "=3.2.3"
solana-sdk = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"
toml = "0.9.7"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"

[[bin]]
name = "main_mode"
path = "src/entry_point/main_mode.rs"

[[bin]]
name = "create_nonce"
path = "src/bin/create_nonce.rs"